[package]
name = "proxy_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
futures = "0.3.27"
rayon = "1.7.0"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = {version="1.0.156", features=["derive"]}
serde_json = "1.0.94"
tokio = { version = "1", features = ["full"] }
